--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "npm-run-all --parallel dev:del dev:sass-dev dev:webpack dev:eleventy",
     "dev:del": "rimraf dist",
-    "dev:sass-dev": "node-sass --watch _process/scss/style.scss --output-style expanded --source-map true _process/scss/style.scss --output  _site/css/style.css",
+    "dev:sass-dev": "node-sass --watch _process/scss/style.scss --output-style expanded --source-map true --output _site/css",
     "dev:eleventy": "eleventy --serve --quiet",
     "dev:webpack": "webpack --watch",
     "build": "run-s prod:*",
