--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.3",
   "description": "Blogging template for the 11ty.io static site generator.",
   "scripts": {
-    "start": "npm-run-all --parallel dev:del dev:webpack dev:sass-dev dev:eleventy",
-    "dev:del": "rimraf dist",
+    "start": "npm-run-all --parallel dev:webpack dev:sass-dev dev:eleventy",
     "dev:sass-dev": "node-sass --watch _process/scss --output-style expanded --source-map true --output _site/css",
     "dev:eleventy": "eleventy --serve --quiet",
     "dev:webpack": "webpack --watch",
@@ -26,30 +25,30 @@
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^0.7.1",
-    "@11ty/eleventy-plugin-rss": "^1.0.5",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.1",
-    "@fortawesome/fontawesome-free": "^5.7.2",
+    "@11ty/eleventy-plugin-rss": "^1.0.7",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
+    "@fortawesome/fontawesome-free": "^5.13.1",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "css-loader": "^2.1.0",
-    "luxon": "^1.11.2",
+    "css-loader": "^2.1.1",
+    "luxon": "^1.24.1",
     "markdown-it": "^8.4.1",
-    "markdown-it-anchor": "^5.0.2",
-    "node-sass": "^4.11.0",
+    "markdown-it-anchor": "^5.3.0",
+    "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
-    "popper.js": "^1.14.7",
-    "sass-loader": "^7.1.0",
+    "popper.js": "^1.16.1",
+    "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
-    "vue-loader": "^15.6.2",
+    "vue-loader": "^15.9.3",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.6",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3"
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "animate.css": "^3.7.0",
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.3.1",
-    "vue": "^2.6.6"
+    "animate.css": "^3.7.2",
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
+    "vue": "^2.6.11"
   }
 }
